# QRCodeCreation

./: Cargo.toml
pkg/: create_qrcode_svg.d.ts  create_qrcode_svg.js  create_qrcode_svg_bg.wasm  create_qrcode_svg_bg.wasm.d.ts
src/: main.rs
